--- a/components/todolist/languages/todoliststrconsts.de.po
+++ b/components/todolist/languages/todoliststrconsts.de.po
@@ -19,6 +19,10 @@ msgstr ""
 msgid "Done comment"
 msgstr ""
 
+#: todoliststrconsts.attribnamefixme
+msgid "FixMe comment"
+msgstr ""
+
 #: todoliststrconsts.attribnamenote
 msgid "Note comment"
 msgstr ""
@@ -67,81 +71,64 @@ msgstr "Makro einfügen"
 msgid "Edit"
 msgstr ""
 
-#: todoliststrconsts.lisfilteritem0
-msgid "All"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem1
-msgid "ToDo Only"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem2
-msgid "Done Only"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem3
-msgid "Note Only"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem4
-msgid "ToDo & Done"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem5
-msgid "ToDo & Note"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem6
-msgid "Done & Note"
-msgstr ""
-
 #: todoliststrconsts.lishelp
 msgid "Help"
 msgstr ""
 
-#: todoliststrconsts.lisinclude
-msgid "Include"
-msgstr ""
-
 #: todoliststrconsts.lispackages
-msgid "Packages"
+#, fuzzy
+#| msgid "Packages"
+msgid "Used packages"
 msgstr "Packages"
-
-#: todoliststrconsts.lispackageshint
-#, object-pascal-format
-msgid "Extends \"%s\" and \"%s\" options by units from used packages"
-msgstr "Erweitert \"%s\" und \"%s\" Einstellungen durch Units von verwendeten Packages"
 
 #: todoliststrconsts.lispkgfiletypetext
 msgid "Text"
 msgstr "Text"
 
-#: todoliststrconsts.lisshowwhat
-msgid "Show"
+#: todoliststrconsts.lisshowfiles
+msgid "Show Files"
 msgstr ""
 
-#: todoliststrconsts.lisshowwhathint
+#: todoliststrconsts.lisshowfileshint
+msgid "Select which Pascal units and .todo files to list"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypes
+msgid "Show Types"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypeshint
+msgctxt "todoliststrconsts.lisshowtypeshint"
 msgid "Select which ToDo types to list"
 msgstr ""
 
 #: todoliststrconsts.lissourceeditor
-msgid "Editor"
+#, fuzzy
+#| msgid "Editor"
+msgid "Source editor files"
 msgstr "Editor"
 
-#: todoliststrconsts.lissourceeditorhint
-msgctxt "todoliststrconsts.lissourceeditorhint"
-msgid "Add units in source editor"
-msgstr "Fügt Units im Quelltexteditor zu"
-
 #: todoliststrconsts.listddedittodo
-msgid "Edit the ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddedittodo"
+msgid "Edit the ToDo item"
+msgstr ""
+
+#: todoliststrconsts.listddedittododlgcaption
+msgctxt "todoliststrconsts.listddedittododlgcaption"
+msgid "Edit the ToDo item"
 msgstr ""
 
 #: todoliststrconsts.listddinserttodo
 #, fuzzy
 #| msgid "Insert ToDo"
-msgid "Insert a ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddinserttodo"
+msgid "Insert a ToDo item"
 msgstr "ToDo einfügen"
+
+#: todoliststrconsts.listddinserttododlgcaption
+msgctxt "todoliststrconsts.listddinserttododlgcaption"
+msgid "Insert a ToDo item"
+msgstr ""
 
 #: todoliststrconsts.listodocolorsareattheendofcolorlist
 msgid "ToDo colors are at the end of color list"
@@ -155,13 +142,14 @@ msgstr "Export"
 msgid "Goto"
 msgstr "Gehe zu"
 
+#: todoliststrconsts.listodoitems
+#, object-pascal-format
+msgid "%d items"
+msgstr ""
+
 #: todoliststrconsts.listodoldescription
 msgid "Description"
 msgstr "Beschreibung"
-
-#: todoliststrconsts.listodoldone
-msgid "Done"
-msgstr "Erledigt"
 
 #: todoliststrconsts.listodolfile
 msgid "Module"
@@ -172,12 +160,10 @@ msgid "ToDo List"
 msgstr "ToDo-Liste"
 
 #: todoliststrconsts.listodolisted
-msgid "Listed"
+#, fuzzy
+#| msgid "Listed"
+msgid "Listed files"
 msgstr "Gelistet"
-
-#: todoliststrconsts.listodolistedhint
-msgid "Add units listed in project inspector/package editor"
-msgstr "Fügt im Projektinspektor/Package-Editor gelistete Units hinzu"
 
 #: todoliststrconsts.listodolistedit
 msgid "Edit selected item"
@@ -188,7 +174,9 @@ msgid "Goto selected source line"
 msgstr "Zur gewählten Quelltextzeile springen"
 
 #: todoliststrconsts.listodolistrefresh
-msgid "Refresh todo items"
+#, fuzzy
+#| msgid "Refresh todo items"
+msgid "Refresh ToDo items"
 msgstr "Aktualisiert die ToDo-Elemente"
 
 #: todoliststrconsts.listodolline
@@ -211,13 +199,9 @@ msgstr ""
 msgid "ToDo type"
 msgstr ""
 
-#: todoliststrconsts.listodoused
-msgid "Used"
-msgstr "Verwendet"
-
-#: todoliststrconsts.listodousedhint
-msgid "Add units used by main source file"
-msgstr "Fügt von der Hauptquelltextdatei verwendete Units hinzu"
+#: todoliststrconsts.listodousedunits
+msgid "Used units"
+msgstr ""
 
 #: todoliststrconsts.listtodolcategory
 msgid "Category"
