--- a/components/todolist/languages/todoliststrconsts.fi.po
+++ b/components/todolist/languages/todoliststrconsts.fi.po
@@ -9,6 +9,10 @@ msgstr ""
 msgid "Done comment"
 msgstr ""
 
+#: todoliststrconsts.attribnamefixme
+msgid "FixMe comment"
+msgstr ""
+
 #: todoliststrconsts.attribnamenote
 msgid "Note comment"
 msgstr ""
@@ -57,81 +61,64 @@ msgstr "Lisää Makro"
 msgid "Edit"
 msgstr ""
 
-#: todoliststrconsts.lisfilteritem0
-msgid "All"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem1
-msgid "ToDo Only"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem2
-msgid "Done Only"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem3
-msgid "Note Only"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem4
-msgid "ToDo & Done"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem5
-msgid "ToDo & Note"
-msgstr ""
-
-#: todoliststrconsts.lisfilteritem6
-msgid "Done & Note"
-msgstr ""
-
 #: todoliststrconsts.lishelp
 msgid "Help"
 msgstr "Ohje"
 
-#: todoliststrconsts.lisinclude
-msgid "Include"
-msgstr ""
-
 #: todoliststrconsts.lispackages
-msgid "Packages"
+#, fuzzy
+#| msgid "Packages"
+msgid "Used packages"
 msgstr "Paketit"
-
-#: todoliststrconsts.lispackageshint
-#, object-pascal-format
-msgid "Extends \"%s\" and \"%s\" options by units from used packages"
-msgstr "Laajentaa \"%s\" ja \"%s\" asetukset käytettyjen pakettien käännösyksiköillä"
 
 #: todoliststrconsts.lispkgfiletypetext
 msgid "Text"
 msgstr "Teksti"
 
-#: todoliststrconsts.lisshowwhat
-msgid "Show"
+#: todoliststrconsts.lisshowfiles
+msgid "Show Files"
 msgstr ""
 
-#: todoliststrconsts.lisshowwhathint
+#: todoliststrconsts.lisshowfileshint
+msgid "Select which Pascal units and .todo files to list"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypes
+msgid "Show Types"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypeshint
+msgctxt "todoliststrconsts.lisshowtypeshint"
 msgid "Select which ToDo types to list"
 msgstr ""
 
 #: todoliststrconsts.lissourceeditor
-msgid "Editor"
+#, fuzzy
+#| msgid "Editor"
+msgid "Source editor files"
 msgstr "Muokkain"
 
-#: todoliststrconsts.lissourceeditorhint
-msgctxt "todoliststrconsts.lissourceeditorhint"
-msgid "Add units in source editor"
-msgstr "Lisää käännösyksiköt editorista"
-
 #: todoliststrconsts.listddedittodo
-msgid "Edit the ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddedittodo"
+msgid "Edit the ToDo item"
+msgstr ""
+
+#: todoliststrconsts.listddedittododlgcaption
+msgctxt "todoliststrconsts.listddedittododlgcaption"
+msgid "Edit the ToDo item"
 msgstr ""
 
 #: todoliststrconsts.listddinserttodo
 #, fuzzy
 #| msgid "Insert ToDo"
-msgid "Insert a ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddinserttodo"
+msgid "Insert a ToDo item"
 msgstr "Lisää ToDo-merkintä"
+
+#: todoliststrconsts.listddinserttododlgcaption
+msgctxt "todoliststrconsts.listddinserttododlgcaption"
+msgid "Insert a ToDo item"
+msgstr ""
 
 #: todoliststrconsts.listodocolorsareattheendofcolorlist
 msgid "ToDo colors are at the end of color list"
@@ -145,13 +132,14 @@ msgstr "Vie"
 msgid "Goto"
 msgstr "Mene"
 
+#: todoliststrconsts.listodoitems
+#, object-pascal-format
+msgid "%d items"
+msgstr ""
+
 #: todoliststrconsts.listodoldescription
 msgid "Description"
 msgstr "Selitys"
-
-#: todoliststrconsts.listodoldone
-msgid "Done"
-msgstr "Tehty"
 
 #: todoliststrconsts.listodolfile
 msgid "Module"
@@ -162,12 +150,10 @@ msgid "ToDo List"
 msgstr "ToDo luettelo"
 
 #: todoliststrconsts.listodolisted
-msgid "Listed"
+#, fuzzy
+#| msgid "Listed"
+msgid "Listed files"
 msgstr "Luetteloidut"
-
-#: todoliststrconsts.listodolistedhint
-msgid "Add units listed in project inspector/package editor"
-msgstr "Lisää projektinhallinnan/pakettimuokkaimen käännösyksiköt"
 
 #: todoliststrconsts.listodolistedit
 msgid "Edit selected item"
@@ -178,7 +164,9 @@ msgid "Goto selected source line"
 msgstr "Mene valitulle lähderiville"
 
 #: todoliststrconsts.listodolistrefresh
-msgid "Refresh todo items"
+#, fuzzy
+#| msgid "Refresh todo items"
+msgid "Refresh ToDo items"
 msgstr "Virkistä todo kohdat"
 
 #: todoliststrconsts.listodolline
@@ -201,13 +189,9 @@ msgstr ""
 msgid "ToDo type"
 msgstr ""
 
-#: todoliststrconsts.listodoused
-msgid "Used"
-msgstr "Käytetty"
-
-#: todoliststrconsts.listodousedhint
-msgid "Add units used by main source file"
-msgstr "Lisää pää-lähdekoodin käännösyksiköt"
+#: todoliststrconsts.listodousedunits
+msgid "Used units"
+msgstr ""
 
 #: todoliststrconsts.listtodolcategory
 msgid "Category"
