--- a/components/todolist/languages/todoliststrconsts.fr.po
+++ b/components/todolist/languages/todoliststrconsts.fr.po
@@ -19,6 +19,10 @@ msgstr ""
 msgid "Done comment"
 msgstr ""
 
+#: todoliststrconsts.attribnamefixme
+msgid "FixMe comment"
+msgstr ""
+
 #: todoliststrconsts.attribnamenote
 msgid "Note comment"
 msgstr ""
@@ -70,79 +74,65 @@ msgstr "Insérer une macro"
 msgid "Edit"
 msgstr ""
 
-#: todoliststrconsts.lisfilteritem0
-msgid "All"
-msgstr "Tout"
-
-#: todoliststrconsts.lisfilteritem1
-msgid "ToDo Only"
-msgstr "À faire uniquement"
-
-#: todoliststrconsts.lisfilteritem2
-msgid "Done Only"
-msgstr "Terminés seulement"
-
-#: todoliststrconsts.lisfilteritem3
-msgid "Note Only"
-msgstr "Seulement les notes"
-
-#: todoliststrconsts.lisfilteritem4
-msgid "ToDo & Done"
-msgstr "À faire et terminés"
-
-#: todoliststrconsts.lisfilteritem5
-msgid "ToDo & Note"
-msgstr "À faire et notes"
-
-#: todoliststrconsts.lisfilteritem6
-msgid "Done & Note"
-msgstr "Terminés et notes"
-
 #: todoliststrconsts.lishelp
 msgid "Help"
 msgstr "Aide"
 
-#: todoliststrconsts.lisinclude
-msgid "Include"
-msgstr ""
-
 #: todoliststrconsts.lispackages
-msgid "Packages"
+#, fuzzy
+#| msgid "Packages"
+msgid "Used packages"
 msgstr "Paquets"
-
-#: todoliststrconsts.lispackageshint
-#, object-pascal-format
-msgid "Extends \"%s\" and \"%s\" options by units from used packages"
-msgstr "Étendre \"%s\" et les options \"%s\" par unités à partir de paquets utilisés"
 
 #: todoliststrconsts.lispkgfiletypetext
 msgid "Text"
 msgstr "Texte"
 
-#: todoliststrconsts.lisshowwhat
-msgid "Show"
-msgstr "Afficher"
+#: todoliststrconsts.lisshowfiles
+msgid "Show Files"
+msgstr ""
 
-#: todoliststrconsts.lisshowwhathint
+#: todoliststrconsts.lisshowfileshint
+msgid "Select which Pascal units and .todo files to list"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypes
+msgid "Show Types"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypeshint
+#, fuzzy
+msgctxt "todoliststrconsts.lisshowtypeshint"
 msgid "Select which ToDo types to list"
 msgstr "Sélectionner les types de tâches à lister"
 
 #: todoliststrconsts.lissourceeditor
-msgid "Editor"
+#, fuzzy
+#| msgid "Editor"
+msgid "Source editor files"
 msgstr "Éditeur"
 
-#: todoliststrconsts.lissourceeditorhint
-msgctxt "todoliststrconsts.lissourceeditorhint"
-msgid "Add units in source editor"
-msgstr "Ajouter les unités de l'éditeur de source"
-
 #: todoliststrconsts.listddedittodo
-msgid "Edit the ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddedittodo"
+msgid "Edit the ToDo item"
+msgstr ""
+
+#: todoliststrconsts.listddedittododlgcaption
+msgctxt "todoliststrconsts.listddedittododlgcaption"
+msgid "Edit the ToDo item"
 msgstr ""
 
 #: todoliststrconsts.listddinserttodo
-msgid "Insert a ToDo/Done/Note"
+#, fuzzy
+#| msgid "Insert a ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddinserttodo"
+msgid "Insert a ToDo item"
 msgstr "Insérer une tâche à faire, une tâche terminée, une note"
+
+#: todoliststrconsts.listddinserttododlgcaption
+msgctxt "todoliststrconsts.listddinserttododlgcaption"
+msgid "Insert a ToDo item"
+msgstr ""
 
 #: todoliststrconsts.listodocolorsareattheendofcolorlist
 msgid "ToDo colors are at the end of color list"
@@ -156,13 +146,14 @@ msgstr "Exporter"
 msgid "Goto"
 msgstr "Aller"
 
+#: todoliststrconsts.listodoitems
+#, object-pascal-format
+msgid "%d items"
+msgstr ""
+
 #: todoliststrconsts.listodoldescription
 msgid "Description"
 msgstr "Description"
-
-#: todoliststrconsts.listodoldone
-msgid "Done"
-msgstr "Fait"
 
 #: todoliststrconsts.listodolfile
 msgid "Module"
@@ -173,12 +164,10 @@ msgid "ToDo List"
 msgstr "Pense-bête"
 
 #: todoliststrconsts.listodolisted
-msgid "Listed"
+#, fuzzy
+#| msgid "Listed"
+msgid "Listed files"
 msgstr "Listé"
-
-#: todoliststrconsts.listodolistedhint
-msgid "Add units listed in project inspector/package editor"
-msgstr "Ajouter les unités listées dans l'inspecteur de projet/l'éditeur de paquet"
 
 #: todoliststrconsts.listodolistedit
 msgid "Edit selected item"
@@ -189,7 +178,9 @@ msgid "Goto selected source line"
 msgstr "Aller à la ligne du code source sélectionné"
 
 #: todoliststrconsts.listodolistrefresh
-msgid "Refresh todo items"
+#, fuzzy
+#| msgid "Refresh todo items"
+msgid "Refresh ToDo items"
 msgstr "Rafraîchir le pense-bête"
 
 #: todoliststrconsts.listodolline
@@ -212,13 +203,9 @@ msgstr "Type"
 msgid "ToDo type"
 msgstr "Type de tâche à faire"
 
-#: todoliststrconsts.listodoused
-msgid "Used"
-msgstr "Utilisé"
-
-#: todoliststrconsts.listodousedhint
-msgid "Add units used by main source file"
-msgstr "Ajouter les unités utilisées dans le fichier source principal"
+#: todoliststrconsts.listodousedunits
+msgid "Used units"
+msgstr ""
 
 #: todoliststrconsts.listtodolcategory
 msgid "Category"
