--- a/components/todolist/languages/todoliststrconsts.pt_BR.po
+++ b/components/todolist/languages/todoliststrconsts.pt_BR.po
@@ -19,6 +19,10 @@ msgstr ""
 msgid "Done comment"
 msgstr ""
 
+#: todoliststrconsts.attribnamefixme
+msgid "FixMe comment"
+msgstr ""
+
 #: todoliststrconsts.attribnamenote
 msgid "Note comment"
 msgstr ""
@@ -70,79 +74,65 @@ msgstr "Inserir Macro"
 msgid "Edit"
 msgstr ""
 
-#: todoliststrconsts.lisfilteritem0
-msgid "All"
-msgstr "Todos"
-
-#: todoliststrconsts.lisfilteritem1
-msgid "ToDo Only"
-msgstr "Apenas \"ToDo\""
-
-#: todoliststrconsts.lisfilteritem2
-msgid "Done Only"
-msgstr "Apenas \"Feito\""
-
-#: todoliststrconsts.lisfilteritem3
-msgid "Note Only"
-msgstr "Apenas \"Nota\""
-
-#: todoliststrconsts.lisfilteritem4
-msgid "ToDo & Done"
-msgstr "ToDo e Feito"
-
-#: todoliststrconsts.lisfilteritem5
-msgid "ToDo & Note"
-msgstr "ToDo e Nota"
-
-#: todoliststrconsts.lisfilteritem6
-msgid "Done & Note"
-msgstr "Feito e Nota"
-
 #: todoliststrconsts.lishelp
 msgid "Help"
 msgstr "Ajuda"
 
-#: todoliststrconsts.lisinclude
-msgid "Include"
-msgstr ""
-
 #: todoliststrconsts.lispackages
-msgid "Packages"
+#, fuzzy
+#| msgid "Packages"
+msgid "Used packages"
 msgstr "Pacotes"
-
-#: todoliststrconsts.lispackageshint
-#, object-pascal-format
-msgid "Extends \"%s\" and \"%s\" options by units from used packages"
-msgstr "Estende opções \"%s\" e \"%s\" por unidades de pacotes usados"
 
 #: todoliststrconsts.lispkgfiletypetext
 msgid "Text"
 msgstr "Texto"
 
-#: todoliststrconsts.lisshowwhat
-msgid "Show"
-msgstr "Exibir"
+#: todoliststrconsts.lisshowfiles
+msgid "Show Files"
+msgstr ""
 
-#: todoliststrconsts.lisshowwhathint
+#: todoliststrconsts.lisshowfileshint
+msgid "Select which Pascal units and .todo files to list"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypes
+msgid "Show Types"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypeshint
+#, fuzzy
+msgctxt "todoliststrconsts.lisshowtypeshint"
 msgid "Select which ToDo types to list"
 msgstr "Selecionar quais tipos \"ToDo\" listar"
 
 #: todoliststrconsts.lissourceeditor
-msgid "Editor"
+#, fuzzy
+#| msgid "Editor"
+msgid "Source editor files"
 msgstr "Editor"
 
-#: todoliststrconsts.lissourceeditorhint
-msgctxt "todoliststrconsts.lissourceeditorhint"
-msgid "Add units in source editor"
-msgstr "Adiciona unidades no editor de código"
-
 #: todoliststrconsts.listddedittodo
-msgid "Edit the ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddedittodo"
+msgid "Edit the ToDo item"
+msgstr ""
+
+#: todoliststrconsts.listddedittododlgcaption
+msgctxt "todoliststrconsts.listddedittododlgcaption"
+msgid "Edit the ToDo item"
 msgstr ""
 
 #: todoliststrconsts.listddinserttodo
-msgid "Insert a ToDo/Done/Note"
+#, fuzzy
+#| msgid "Insert a ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddinserttodo"
+msgid "Insert a ToDo item"
 msgstr "Inserir \"ToDo/Feito/Nota\""
+
+#: todoliststrconsts.listddinserttododlgcaption
+msgctxt "todoliststrconsts.listddinserttododlgcaption"
+msgid "Insert a ToDo item"
+msgstr ""
 
 #: todoliststrconsts.listodocolorsareattheendofcolorlist
 msgid "ToDo colors are at the end of color list"
@@ -156,13 +146,14 @@ msgstr "Exportar"
 msgid "Goto"
 msgstr "Ir para"
 
+#: todoliststrconsts.listodoitems
+#, object-pascal-format
+msgid "%d items"
+msgstr ""
+
 #: todoliststrconsts.listodoldescription
 msgid "Description"
 msgstr "Descrição"
-
-#: todoliststrconsts.listodoldone
-msgid "Done"
-msgstr "Feito"
 
 #: todoliststrconsts.listodolfile
 msgid "Module"
@@ -173,12 +164,10 @@ msgid "ToDo List"
 msgstr "Lista \"ToDo\""
 
 #: todoliststrconsts.listodolisted
-msgid "Listed"
+#, fuzzy
+#| msgid "Listed"
+msgid "Listed files"
 msgstr "Listado"
-
-#: todoliststrconsts.listodolistedhint
-msgid "Add units listed in project inspector/package editor"
-msgstr "Adiciona unidades listadas no inspetor de projeto/editor de pacotes"
 
 #: todoliststrconsts.listodolistedit
 msgid "Edit selected item"
@@ -189,7 +178,9 @@ msgid "Goto selected source line"
 msgstr "Ir para linha do fonte selecionada"
 
 #: todoliststrconsts.listodolistrefresh
-msgid "Refresh todo items"
+#, fuzzy
+#| msgid "Refresh todo items"
+msgid "Refresh ToDo items"
 msgstr "Atualizar itens \"à fazer\""
 
 #: todoliststrconsts.listodolline
@@ -212,13 +203,9 @@ msgstr "Tipo"
 msgid "ToDo type"
 msgstr "Tipo \"ToDo\""
 
-#: todoliststrconsts.listodoused
-msgid "Used"
-msgstr "Usado"
-
-#: todoliststrconsts.listodousedhint
-msgid "Add units used by main source file"
-msgstr "Adiciona unidades usadas pelo código fonte principal"
+#: todoliststrconsts.listodousedunits
+msgid "Used units"
+msgstr ""
 
 #: todoliststrconsts.listtodolcategory
 msgid "Category"
