--- a/components/todolist/languages/todoliststrconsts.sk.po
+++ b/components/todolist/languages/todoliststrconsts.sk.po
@@ -20,6 +20,10 @@ msgstr "ToDo komentáre"
 msgid "Done comment"
 msgstr "Done komentár"
 
+#: todoliststrconsts.attribnamefixme
+msgid "FixMe comment"
+msgstr ""
+
 #: todoliststrconsts.attribnamenote
 msgid "Note comment"
 msgstr "Note komentár"
@@ -68,79 +72,67 @@ msgstr "Vložiť makro"
 msgid "Edit"
 msgstr "Upraviť"
 
-#: todoliststrconsts.lisfilteritem0
-msgid "All"
-msgstr "Všetko"
-
-#: todoliststrconsts.lisfilteritem1
-msgid "ToDo Only"
-msgstr "Len ToDo"
-
-#: todoliststrconsts.lisfilteritem2
-msgid "Done Only"
-msgstr "Len Done"
-
-#: todoliststrconsts.lisfilteritem3
-msgid "Note Only"
-msgstr "Len Note"
-
-#: todoliststrconsts.lisfilteritem4
-msgid "ToDo & Done"
-msgstr "ToDo & Done"
-
-#: todoliststrconsts.lisfilteritem5
-msgid "ToDo & Note"
-msgstr "ToDo & Note"
-
-#: todoliststrconsts.lisfilteritem6
-msgid "Done & Note"
-msgstr "Done & Note"
-
 #: todoliststrconsts.lishelp
 msgid "Help"
 msgstr "Pomoc"
 
-#: todoliststrconsts.lisinclude
-msgid "Include"
-msgstr "Zahrnúť"
-
 #: todoliststrconsts.lispackages
-msgid "Packages"
+#, fuzzy
+#| msgid "Packages"
+msgid "Used packages"
 msgstr "Balíčky"
-
-#: todoliststrconsts.lispackageshint
-#, object-pascal-format
-msgid "Extends \"%s\" and \"%s\" options by units from used packages"
-msgstr "Rozšíriť voľby \"%s\" a \"%s\" o jednotky z použitých balíčkov"
 
 #: todoliststrconsts.lispkgfiletypetext
 msgid "Text"
 msgstr "Text"
 
-#: todoliststrconsts.lisshowwhat
-msgid "Show"
-msgstr "Zobraziť"
+#: todoliststrconsts.lisshowfiles
+msgid "Show Files"
+msgstr ""
 
-#: todoliststrconsts.lisshowwhathint
+#: todoliststrconsts.lisshowfileshint
+msgid "Select which Pascal units and .todo files to list"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypes
+msgid "Show Types"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypeshint
+#, fuzzy
+msgctxt "todoliststrconsts.lisshowtypeshint"
 msgid "Select which ToDo types to list"
 msgstr "Vybrať, ktoré typy ToDo sa majú zobraziť"
 
 #: todoliststrconsts.lissourceeditor
-msgid "Editor"
+#, fuzzy
+#| msgid "Editor"
+msgid "Source editor files"
 msgstr "Editor"
 
-#: todoliststrconsts.lissourceeditorhint
-msgctxt "todoliststrconsts.lissourceeditorhint"
-msgid "Add units in source editor"
-msgstr "Pridať jednotky v editore zdrojového kódu"
-
 #: todoliststrconsts.listddedittodo
-msgid "Edit the ToDo/Done/Note"
+#, fuzzy
+#| msgid "Edit the ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddedittodo"
+msgid "Edit the ToDo item"
 msgstr "Upraviť ToDo/Done/Note"
 
+#: todoliststrconsts.listddedittododlgcaption
+msgctxt "todoliststrconsts.listddedittododlgcaption"
+msgid "Edit the ToDo item"
+msgstr ""
+
 #: todoliststrconsts.listddinserttodo
-msgid "Insert a ToDo/Done/Note"
+#, fuzzy
+#| msgid "Insert a ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddinserttodo"
+msgid "Insert a ToDo item"
 msgstr "Vložiť ToDo/Done/Note"
+
+#: todoliststrconsts.listddinserttododlgcaption
+msgctxt "todoliststrconsts.listddinserttododlgcaption"
+msgid "Insert a ToDo item"
+msgstr ""
 
 #: todoliststrconsts.listodocolorsareattheendofcolorlist
 msgid "ToDo colors are at the end of color list"
@@ -154,13 +146,14 @@ msgstr "Exportovať"
 msgid "Goto"
 msgstr "Choď na"
 
+#: todoliststrconsts.listodoitems
+#, object-pascal-format
+msgid "%d items"
+msgstr ""
+
 #: todoliststrconsts.listodoldescription
 msgid "Description"
 msgstr "Popis"
-
-#: todoliststrconsts.listodoldone
-msgid "Done"
-msgstr "Done"
 
 #: todoliststrconsts.listodolfile
 msgid "Module"
@@ -171,12 +164,10 @@ msgid "ToDo List"
 msgstr "ToDo zoznam"
 
 #: todoliststrconsts.listodolisted
-msgid "Listed"
+#, fuzzy
+#| msgid "Listed"
+msgid "Listed files"
 msgstr "Uvedený"
-
-#: todoliststrconsts.listodolistedhint
-msgid "Add units listed in project inspector/package editor"
-msgstr "Pridať jednotky uvedené v inšpektorovi projektu/editore balíčkov"
 
 #: todoliststrconsts.listodolistedit
 msgid "Edit selected item"
@@ -187,7 +178,9 @@ msgid "Goto selected source line"
 msgstr "Choď na vybratý zdrojový riadok"
 
 #: todoliststrconsts.listodolistrefresh
-msgid "Refresh todo items"
+#, fuzzy
+#| msgid "Refresh todo items"
+msgid "Refresh ToDo items"
 msgstr "Obnoviť ToDo položky"
 
 #: todoliststrconsts.listodolline
@@ -210,13 +203,9 @@ msgstr "Typ"
 msgid "ToDo type"
 msgstr "Typ ToDo"
 
-#: todoliststrconsts.listodoused
-msgid "Used"
-msgstr "Použité"
-
-#: todoliststrconsts.listodousedhint
-msgid "Add units used by main source file"
-msgstr "Pridať jednotky použité hlavným zdrojovým súborom"
+#: todoliststrconsts.listodousedunits
+msgid "Used units"
+msgstr ""
 
 #: todoliststrconsts.listtodolcategory
 msgid "Category"
