--- a/components/todolist/languages/todoliststrconsts.uk.po
+++ b/components/todolist/languages/todoliststrconsts.uk.po
@@ -22,6 +22,10 @@ msgstr ""
 msgid "Done comment"
 msgstr ""
 
+#: todoliststrconsts.attribnamefixme
+msgid "FixMe comment"
+msgstr ""
+
 #: todoliststrconsts.attribnamenote
 msgid "Note comment"
 msgstr ""
@@ -73,79 +77,65 @@ msgstr "Вставити макрос"
 msgid "Edit"
 msgstr ""
 
-#: todoliststrconsts.lisfilteritem0
-msgid "All"
-msgstr "Всі"
-
-#: todoliststrconsts.lisfilteritem1
-msgid "ToDo Only"
-msgstr "Лише ToDo"
-
-#: todoliststrconsts.lisfilteritem2
-msgid "Done Only"
-msgstr "Лише Done"
-
-#: todoliststrconsts.lisfilteritem3
-msgid "Note Only"
-msgstr "Лише Note"
-
-#: todoliststrconsts.lisfilteritem4
-msgid "ToDo & Done"
-msgstr "ToDo і Done"
-
-#: todoliststrconsts.lisfilteritem5
-msgid "ToDo & Note"
-msgstr "ToDo і Note"
-
-#: todoliststrconsts.lisfilteritem6
-msgid "Done & Note"
-msgstr "Done і Note"
-
 #: todoliststrconsts.lishelp
 msgid "Help"
 msgstr "Довідка"
 
-#: todoliststrconsts.lisinclude
-msgid "Include"
-msgstr ""
-
 #: todoliststrconsts.lispackages
-msgid "Packages"
+#, fuzzy
+#| msgid "Packages"
+msgid "Used packages"
 msgstr "Пакунки"
-
-#: todoliststrconsts.lispackageshint
-#, object-pascal-format
-msgid "Extends \"%s\" and \"%s\" options by units from used packages"
-msgstr "Доповнює параметри \"%s\" і \"%s\" модулями з використаних пакунків"
 
 #: todoliststrconsts.lispkgfiletypetext
 msgid "Text"
 msgstr "Текст"
 
-#: todoliststrconsts.lisshowwhat
-msgid "Show"
-msgstr "Показати"
+#: todoliststrconsts.lisshowfiles
+msgid "Show Files"
+msgstr ""
 
-#: todoliststrconsts.lisshowwhathint
+#: todoliststrconsts.lisshowfileshint
+msgid "Select which Pascal units and .todo files to list"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypes
+msgid "Show Types"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypeshint
+#, fuzzy
+msgctxt "todoliststrconsts.lisshowtypeshint"
 msgid "Select which ToDo types to list"
 msgstr "Виберіть, які типи ToDo показати"
 
 #: todoliststrconsts.lissourceeditor
-msgid "Editor"
+#, fuzzy
+#| msgid "Editor"
+msgid "Source editor files"
 msgstr "Редактор"
 
-#: todoliststrconsts.lissourceeditorhint
-msgctxt "todoliststrconsts.lissourceeditorhint"
-msgid "Add units in source editor"
-msgstr "Додати модулі в редактор коду"
-
 #: todoliststrconsts.listddedittodo
-msgid "Edit the ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddedittodo"
+msgid "Edit the ToDo item"
+msgstr ""
+
+#: todoliststrconsts.listddedittododlgcaption
+msgctxt "todoliststrconsts.listddedittododlgcaption"
+msgid "Edit the ToDo item"
 msgstr ""
 
 #: todoliststrconsts.listddinserttodo
-msgid "Insert a ToDo/Done/Note"
+#, fuzzy
+#| msgid "Insert a ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddinserttodo"
+msgid "Insert a ToDo item"
 msgstr "Вставити ToDo/Done/Note"
+
+#: todoliststrconsts.listddinserttododlgcaption
+msgctxt "todoliststrconsts.listddinserttododlgcaption"
+msgid "Insert a ToDo item"
+msgstr ""
 
 #: todoliststrconsts.listodocolorsareattheendofcolorlist
 msgid "ToDo colors are at the end of color list"
@@ -159,13 +149,14 @@ msgstr "Експорт"
 msgid "Goto"
 msgstr "Перейти до"
 
+#: todoliststrconsts.listodoitems
+#, object-pascal-format
+msgid "%d items"
+msgstr ""
+
 #: todoliststrconsts.listodoldescription
 msgid "Description"
 msgstr "Опис"
-
-#: todoliststrconsts.listodoldone
-msgid "Done"
-msgstr "Готово"
 
 #: todoliststrconsts.listodolfile
 msgid "Module"
@@ -176,12 +167,10 @@ msgid "ToDo List"
 msgstr "Список ToDo"
 
 #: todoliststrconsts.listodolisted
-msgid "Listed"
+#, fuzzy
+#| msgid "Listed"
+msgid "Listed files"
 msgstr "Перелічені"
-
-#: todoliststrconsts.listodolistedhint
-msgid "Add units listed in project inspector/package editor"
-msgstr "Додати модулі, перелічені в Інспекторі об’єктів/Редакторі пакунків"
 
 #: todoliststrconsts.listodolistedit
 msgid "Edit selected item"
@@ -192,7 +181,9 @@ msgid "Goto selected source line"
 msgstr "Перейти до вибраного рядка сирців"
 
 #: todoliststrconsts.listodolistrefresh
-msgid "Refresh todo items"
+#, fuzzy
+#| msgid "Refresh todo items"
+msgid "Refresh ToDo items"
 msgstr "Оновити елементи ToDo"
 
 #: todoliststrconsts.listodolline
@@ -215,13 +206,9 @@ msgstr "Тип"
 msgid "ToDo type"
 msgstr "Тип ToDo"
 
-#: todoliststrconsts.listodoused
-msgid "Used"
-msgstr "Використані"
-
-#: todoliststrconsts.listodousedhint
-msgid "Add units used by main source file"
-msgstr "Додати модулі, використані в головному файлі коду"
+#: todoliststrconsts.listodousedunits
+msgid "Used units"
+msgstr ""
 
 #: todoliststrconsts.listtodolcategory
 msgid "Category"
