--- a/components/todolist/languages/todoliststrconsts.zh_CN.po
+++ b/components/todolist/languages/todoliststrconsts.zh_CN.po
@@ -20,6 +20,10 @@ msgstr "待办注释"
 msgid "Done comment"
 msgstr "完成注释"
 
+#: todoliststrconsts.attribnamefixme
+msgid "FixMe comment"
+msgstr ""
+
 #: todoliststrconsts.attribnamenote
 msgid "Note comment"
 msgstr "注释评论"
@@ -71,80 +75,65 @@ msgstr "插入宏"
 msgid "Edit"
 msgstr ""
 
-# 此处不能翻译，会导致功能失效
-#: todoliststrconsts.lisfilteritem0
-msgid "All"
-msgstr "All"
-
-#: todoliststrconsts.lisfilteritem1
-msgid "ToDo Only"
-msgstr "仅待办事项"
-
-#: todoliststrconsts.lisfilteritem2
-msgid "Done Only"
-msgstr "仅已办事项"
-
-#: todoliststrconsts.lisfilteritem3
-msgid "Note Only"
-msgstr "仅笔记"
-
-#: todoliststrconsts.lisfilteritem4
-msgid "ToDo & Done"
-msgstr "待办事项 & 已办事项"
-
-#: todoliststrconsts.lisfilteritem5
-msgid "ToDo & Note"
-msgstr "待办事项 & 笔记"
-
-#: todoliststrconsts.lisfilteritem6
-msgid "Done & Note"
-msgstr "已办事项 & 笔记"
-
 #: todoliststrconsts.lishelp
 msgid "Help"
 msgstr "帮助"
 
-#: todoliststrconsts.lisinclude
-msgid "Include"
-msgstr ""
-
 #: todoliststrconsts.lispackages
-msgid "Packages"
+#, fuzzy
+#| msgid "Packages"
+msgid "Used packages"
 msgstr "软件包"
-
-#: todoliststrconsts.lispackageshint
-#, object-pascal-format
-msgid "Extends \"%s\" and \"%s\" options by units from used packages"
-msgstr "按所用软件包的单位扩展 \"%s\" 和 \"%s\" 选项"
 
 #: todoliststrconsts.lispkgfiletypetext
 msgid "Text"
 msgstr "文本"
 
-#: todoliststrconsts.lisshowwhat
-msgid "Show"
-msgstr "显示"
+#: todoliststrconsts.lisshowfiles
+msgid "Show Files"
+msgstr ""
 
-#: todoliststrconsts.lisshowwhathint
+#: todoliststrconsts.lisshowfileshint
+msgid "Select which Pascal units and .todo files to list"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypes
+msgid "Show Types"
+msgstr ""
+
+#: todoliststrconsts.lisshowtypeshint
+#, fuzzy
+msgctxt "todoliststrconsts.lisshowtypeshint"
 msgid "Select which ToDo types to list"
 msgstr "选择列出的待办事项类型"
 
 #: todoliststrconsts.lissourceeditor
-msgid "Editor"
+#, fuzzy
+#| msgid "Editor"
+msgid "Source editor files"
 msgstr "编辑器"
 
-#: todoliststrconsts.lissourceeditorhint
-msgctxt "todoliststrconsts.lissourceeditorhint"
-msgid "Add units in source editor"
-msgstr "添加在源代码编辑器中的单元"
-
 #: todoliststrconsts.listddedittodo
-msgid "Edit the ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddedittodo"
+msgid "Edit the ToDo item"
+msgstr ""
+
+#: todoliststrconsts.listddedittododlgcaption
+msgctxt "todoliststrconsts.listddedittododlgcaption"
+msgid "Edit the ToDo item"
 msgstr ""
 
 #: todoliststrconsts.listddinserttodo
-msgid "Insert a ToDo/Done/Note"
+#, fuzzy
+#| msgid "Insert a ToDo/Done/Note"
+msgctxt "todoliststrconsts.listddinserttodo"
+msgid "Insert a ToDo item"
 msgstr "插入待办事项(&T)"
+
+#: todoliststrconsts.listddinserttododlgcaption
+msgctxt "todoliststrconsts.listddinserttododlgcaption"
+msgid "Insert a ToDo item"
+msgstr ""
 
 #: todoliststrconsts.listodocolorsareattheendofcolorlist
 msgid "ToDo colors are at the end of color list"
@@ -158,13 +147,14 @@ msgstr "导出"
 msgid "Goto"
 msgstr "转到"
 
+#: todoliststrconsts.listodoitems
+#, object-pascal-format
+msgid "%d items"
+msgstr ""
+
 #: todoliststrconsts.listodoldescription
 msgid "Description"
 msgstr "描述"
-
-#: todoliststrconsts.listodoldone
-msgid "Done"
-msgstr "已办事项"
 
 #: todoliststrconsts.listodolfile
 msgid "Module"
@@ -175,12 +165,10 @@ msgid "ToDo List"
 msgstr "待办事项列表(&T)"
 
 #: todoliststrconsts.listodolisted
-msgid "Listed"
+#, fuzzy
+#| msgid "Listed"
+msgid "Listed files"
 msgstr "列表"
-
-#: todoliststrconsts.listodolistedhint
-msgid "Add units listed in project inspector/package editor"
-msgstr "添加项目查看器/软件包编辑器中列出的单元"
 
 #: todoliststrconsts.listodolistedit
 msgid "Edit selected item"
@@ -191,7 +179,9 @@ msgid "Goto selected source line"
 msgstr "转到选择的代码行"
 
 #: todoliststrconsts.listodolistrefresh
-msgid "Refresh todo items"
+#, fuzzy
+#| msgid "Refresh todo items"
+msgid "Refresh ToDo items"
 msgstr "刷新待办事项条目"
 
 #: todoliststrconsts.listodolline
@@ -214,13 +204,9 @@ msgstr "类型"
 msgid "ToDo type"
 msgstr "待办事项类型"
 
-#: todoliststrconsts.listodoused
-msgid "Used"
-msgstr "使用"
-
-#: todoliststrconsts.listodousedhint
-msgid "Add units used by main source file"
-msgstr "添加主源文件使用的单元"
+#: todoliststrconsts.listodousedunits
+msgid "Used units"
+msgstr ""
 
 #: todoliststrconsts.listtodolcategory
 msgid "Category"
