LCL: Cleanup shellctrls. Update German translation.

--- a/lcl/languages/lclstrconsts.de.po
+++ b/lcl/languages/lclstrconsts.de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-01-19 10:52+0100\n"
+"PO-Revision-Date: 2025-11-27 15:45+0100\n"
 "Last-Translator: Swen Heinig <swen@heinig.email>\n"
 "Language-Team: Deutsch <lazarus@miraclec.com>\n"
 "Language: de_DE\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Generator: Poedit 3.5\n"
+"X-Generator: Poedit 3.7\n"
 
 #: lclstrconsts.hhshelpbrowsernotexecutable
 #, object-pascal-format
@@ -32,7 +32,7 @@ msgid "Unable to find a HTML browser."
 msgstr "Kann den HTML-Browser nicht finden."
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
-#, object-pascal-format, fuzzy
+#, fuzzy, object-pascal-format
 #| msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
 msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
 msgstr "Kein HTML-Browser gefunden.%sBitte legen Sie einen fest unter Werkzeuge -> Einstellungen -> Hilfe -> Hilfeeinstellungen"
@@ -133,10 +133,8 @@ msgid "Backward"
 msgstr "Rückwärts"
 
 #: lclstrconsts.rsbitmaps
-#, fuzzy
-#| msgid "Bitmaps"
 msgid "Bitmap Files"
-msgstr "Bitmaps"
+msgstr "Bitmap-Dateien"
 
 #: lclstrconsts.rsblackcolorcaption
 msgid "Black"
@@ -176,8 +174,6 @@ msgid "Cancel"
 msgstr "Abbrechen"
 
 #: lclstrconsts.rscannotfocus
-#, fuzzy
-#| msgid "Can not focus"
 msgid "Cannot focus"
 msgstr "Kann nicht fokussieren"
 
@@ -269,7 +265,7 @@ msgstr "Einfügen"
 
 #: lclstrconsts.rsduplicateiconformat
 msgid "Duplicate icon format."
-msgstr "Doppeltes Icon-Format"
+msgstr "Doppeltes Icon-Format."
 
 #: lclstrconsts.rseditrecordhint
 msgctxt "lclstrconsts.rseditrecordhint"
@@ -470,7 +466,7 @@ msgstr ""
 
 #: lclstrconsts.rsgridhasnocols
 msgid "Cannot insert rows into a grid when it has no columns"
-msgstr "Kann keine Zeilen in ein Grid einfügen, wenn es keine Spalten hat."
+msgstr "Kann keine Zeilen in ein Grid einfügen, wenn es keine Spalten hat"
 
 #: lclstrconsts.rsgridhasnorows
 msgid "Cannot insert columns into a grid when it has no rows"
@@ -543,16 +539,14 @@ msgid "Call XSynchronize (display, True) after the Xserver connection has been e
 msgstr "--sync                Aufruf von XSynchronize (Display, True) nachdem die XServer-Verbindung zustandegekommen ist. Dies erleichtert das Debugging des X-Protokolls, weil die X-Anfragepufferung abgeschaltet ist und X-Fehler sofort ankommen, nachdem die Anfrage, die den Fehler erzeugt hat, beim X-Server angekommen ist."
 
 #: lclstrconsts.rshelp
-#, fuzzy
 msgctxt "lclstrconsts.rshelp"
 msgid "Help"
 msgstr "Hilfe"
 
 #: lclstrconsts.rshelpalreadyregistered
-#, object-pascal-format, fuzzy
-#| msgid "%s: Already registered"
+#, object-pascal-format
 msgid "%s: already registered."
-msgstr "%s: Bereits registriert"
+msgstr "%s: Bereits registriert,"
 
 #: lclstrconsts.rshelpcontextnotfound
 msgid "A help database was found for this topic, but this topic was not found"
@@ -577,16 +571,14 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Hilfekontext %s nicht in der Datenbank \"%s\" gefunden."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-#, object-pascal-format, fuzzy
-#| msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+#, object-pascal-format
 msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
-msgstr "Die Hilfedatenbank \"%s\" fand keinen Betrachter für eine Hilfeseite des Typs %s"
+msgstr "Die Hilfedatenbank \"%s\" fand keinen Betrachter für eine Hilfeseite des Typs %s."
 
 #: lclstrconsts.rshelphelpdatabasenotfound
-#, object-pascal-format, fuzzy
-#| msgid "Help Database \"%s\" not found"
+#, object-pascal-format
 msgid "Help Database \"%s\" not found."
-msgstr "Hilfedatenbank \"%s\" nicht gefunden"
+msgstr "Hilfedatenbank \"%s\" nicht gefunden."
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
 #, object-pascal-format
@@ -609,10 +601,9 @@ msgid "Help keyword \"%s\" not found in Database \"%s\"."
 msgstr "Hilfeschlüsselwort \"%s\" nicht in der Datenbank \"%s\" gefunden."
 
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
-#, object-pascal-format, fuzzy
-#| msgid "Help node \"%s\" has no Help Database"
+#, object-pascal-format
 msgid "Help node \"%s\" has no Help Database."
-msgstr "Hilfeknoten \"%s\" besitzt keine Hilfedatenbank"
+msgstr "Hilfeknoten \"%s\" besitzt keine Hilfedatenbank."
 
 #: lclstrconsts.rshelpnohelpfoundforsource
 #, object-pascal-format
@@ -620,28 +611,24 @@ msgid "No help found for line %d, column %d of %s."
 msgstr "Keine Hilfe für Zeile %d, Spalte %d von %s gefunden."
 
 #: lclstrconsts.rshelpnohelpnodesavailable
-#, fuzzy
-#| msgid "No help entries available for this topic"
 msgid "No help entries available for this topic."
-msgstr "Keine Hilfeeinträge verfügbar"
+msgstr "Keine Hilfeeinträge verfügbar."
 
 #: lclstrconsts.rshelpnotfound
 msgid "No help found for this topic"
 msgstr "Hilfe für dieses Thema nicht gefunden"
 
 #: lclstrconsts.rshelpnotregistered
-#, object-pascal-format, fuzzy
-#| msgid "%s: Not registered"
+#, object-pascal-format
 msgid "%s: not registered."
-msgstr "%s: Nicht registriert"
+msgstr "%s: Nicht registriert."
 
 #: lclstrconsts.rshelpselectorerror
 msgid "Help Selector Error"
 msgstr "Hilfeauswahlfehler"
 
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
-#, object-pascal-format, fuzzy
-#| msgid "There is no viewer for help type \"%s\""
+#, object-pascal-format
 msgid "There is no viewer for help type \"%s\"."
 msgstr "Es gibt keinen Viewer für den Hilfetyp \"%s\"."
 
@@ -670,16 +657,12 @@ msgid "Hot Light"
 msgstr "Kräftig hervorgehoben"
 
 #: lclstrconsts.rsicns
-#, fuzzy
-#| msgid "Mac OS X Icon"
 msgid "macOS Icon Files"
-msgstr "OSX-Icon-Ressource"
+msgstr "macOS-Icon-Dateien"
 
 #: lclstrconsts.rsicon
-#, fuzzy
-#| msgid "Icon"
 msgid "Icon Files"
-msgstr "Symbol"
+msgstr "Symbol-Dateien"
 
 #: lclstrconsts.rsiconimageempty
 msgid "Icon image cannot be empty"
@@ -855,7 +838,7 @@ msgstr "Dienste"
 
 #: lclstrconsts.rsmacosmenushowall
 msgid "Show All"
-msgstr "alle anzeigen"
+msgstr "Alle anzeigen"
 
 #: lclstrconsts.rsmarooncolorcaption
 msgid "Maroon"
@@ -1002,22 +985,16 @@ msgid "Select a date"
 msgstr "Datum auswählen"
 
 #: lclstrconsts.rspixmap
-#, fuzzy
-#| msgid "Pixmap"
 msgid "Pixmap Files"
-msgstr "Pixmap"
+msgstr "Pixmap-Dateien"
 
 #: lclstrconsts.rsportablenetworkgraphic
-#, fuzzy
-#| msgid "Portable Network Graphic"
 msgid "PNG Files"
-msgstr "PNG-Grafik"
+msgstr "PNG-Dateien"
 
 #: lclstrconsts.rsportablepixmap
-#, fuzzy
-#| msgid "Portable PixMap"
 msgid "Portable Pixmap Files"
-msgstr "Portable Pixmap"
+msgstr "Portable Pixmap-Dateien"
 
 #: lclstrconsts.rspostrecordhint
 msgid "Post"
@@ -1202,7 +1179,7 @@ msgstr "Schriftart auswählen"
 
 #: lclstrconsts.rsshowdetails
 msgid "Show details"
-msgstr ""
+msgstr "Details anzeigen"
 
 #: lclstrconsts.rssilvercolorcaption
 msgid "Silver"
@@ -1226,7 +1203,7 @@ msgstr "Text"
 
 #: lclstrconsts.rstga
 msgid "TGA Image Files"
-msgstr ""
+msgstr "TGA-Bilddateien"
 
 #: lclstrconsts.rsthebuiltinurlisreadonlychangethebaseurlinstead
 msgid "The built-in URL is read only. Change the BaseURL instead."
@@ -1259,7 +1236,7 @@ msgstr "Kann Default-Schriftart nicht laden"
 
 #: lclstrconsts.rsunknownerrorpleasereportthisbug
 msgid "Unknown Error, please report this bug"
-msgstr "Unbekannter Fehler, bitte melden Sie diesen Bug."
+msgstr "Unbekannter Fehler, bitte melden Sie diesen Bug"
 
 #: lclstrconsts.rsunknownpictureextension
 msgid "Unknown picture extension"
@@ -1271,7 +1248,7 @@ msgstr "Unbekanntes Bildformat"
 
 #: lclstrconsts.rsunsupportedbitmapformat
 msgid "Unsupported bitmap format."
-msgstr "Nicht unterstütztes Bitmap-Format"
+msgstr "Nicht unterstütztes Bitmap-Format."
 
 #: lclstrconsts.rsunsupportedclipboardformat
 #, object-pascal-format
@@ -1281,27 +1258,27 @@ msgstr "Nicht unterstütztes Clipboard-Format: %s"
 #: lclstrconsts.rswarningunreleaseddcsdump
 #, object-pascal-format
 msgid " WARNING: There are %d unreleased DCs, a detailed dump follows:"
-msgstr "WARNUNG: Es gibt %d nicht freigegebene DCs. Es folgt ein detaillierter Dump:"
+msgstr " WARNUNG: Es gibt %d nicht freigegebene DCs. Es folgt ein detaillierter Dump:"
 
 #: lclstrconsts.rswarningunreleasedgdiobjectsdump
 #, object-pascal-format
 msgid " WARNING: There are %d unreleased GDIObjects, a detailed dump follows:"
-msgstr "WARNUNG: Es gibt %d nicht freigegebene GDI-Objekte. Es folgt ein detaillierter Dump:"
+msgstr " WARNUNG: Es gibt %d nicht freigegebene GDI-Objekte. Es folgt ein detaillierter Dump:"
 
 #: lclstrconsts.rswarningunreleasedmessagesinqueue
 #, object-pascal-format
 msgid " WARNING: There are %d messages left in the queue! I'll free them"
-msgstr "WARNUNG: Es sind %d Meldungen in der Queue übrig. Sie werden freigegeben"
+msgstr " WARNUNG: Es sind %d Meldungen in der Queue übrig. Sie werden freigegeben"
 
 #: lclstrconsts.rswarningunreleasedtimerinfos
 #, object-pascal-format
 msgid " WARNING: There are %d TimerInfo structures left, I'll free them"
-msgstr "WARNUNG: Es sind %d Timerinfo-Strukturen übrig, sie werden freigegeben"
+msgstr " WARNUNG: Es sind %d Timerinfo-Strukturen übrig, sie werden freigegeben"
 
 #: lclstrconsts.rswarningunremovedpaintmessages
 #, object-pascal-format
 msgid " WARNING: There are %s unremoved LM_PAINT/LM_GtkPAINT message links left."
-msgstr "WARNUNG: Es sind %s nicht entfernte LM_PAINT/LM_GtkPAINT-Meldungs-Links übrig."
+msgstr " WARNUNG: Es sind %s nicht entfernte LM_PAINT/LM_GtkPAINT-Meldungs-Links übrig."
 
 #: lclstrconsts.rswhitecolorcaption
 msgid "White"
@@ -1336,10 +1313,9 @@ msgid "Yellow"
 msgstr "Gelb"
 
 #: lclstrconsts.scannotfocus
-#, object-pascal-format, fuzzy, badformat
-#| msgid "Cannot focus a disabled or invisible window"
+#, object-pascal-format
 msgid "Cannot focus a disabled or invisible window \"%s\""
-msgstr "Kann abgeschaltetes oder unsichtbares Fenster nicht fokussieren"
+msgstr "Kann abgeschaltetes oder unsichtbares Fenster \"%s\" nicht fokussieren"
 
 #: lclstrconsts.sduplicatemenus
 msgid "Duplicate menus"
@@ -1475,7 +1451,7 @@ msgstr "Keine Timer verfügbar"
 #: lclstrconsts.sparentrequired
 #, object-pascal-format
 msgid "Control \"%s\" has no parent window."
-msgstr ""
+msgstr "Steuerelement \"%s\" hat kein übergeordnetes Fenster."
 
 #: lclstrconsts.sparexpected
 #, object-pascal-format
@@ -1503,7 +1479,7 @@ msgstr "Nicht abgeschlossener Byte-Wert"
 
 #: lclstrconsts.sparunterminatedstring
 msgid "Unterminated string"
-msgstr "Nicht abgeschlossene Zeichenkette "
+msgstr "Nicht abgeschlossene Zeichenkette"
 
 #: lclstrconsts.sparwrongtokensymbol
 #, object-pascal-format
@@ -1517,7 +1493,7 @@ msgstr "Falscher Token-Typ: %s erwartet, %s gefunden"
 
 #: lclstrconsts.sshellctrlsattributes
 msgid "Attributes"
-msgstr ""
+msgstr "Attribute"
 
 #: lclstrconsts.sshellctrlsbytes
 #, object-pascal-format
@@ -1574,7 +1550,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsmodificationdate
 msgid "Modif.Date"
-msgstr ""
+msgstr "Änderungsdatum"
 
 #: lclstrconsts.sshellctrlsname
 msgid "Name"
@@ -1594,4 +1570,3 @@ msgstr "Größe"
 #: lclstrconsts.sshellctrlstype
 msgid "Type"
 msgstr "Typ"
-
