--- a/lcl/languages/lclstrconsts.fi.po
+++ b/lcl/languages/lclstrconsts.fi.po
@@ -1610,7 +1610,7 @@ msgid "%s MB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
