--- a/lcl/languages/lclstrconsts.fr.po
+++ b/lcl/languages/lclstrconsts.fr.po
@@ -1611,7 +1611,7 @@ msgid "%s MB"
 msgstr "%s MB"
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
