--- a/lcl/languages/lclstrconsts.id.po
+++ b/lcl/languages/lclstrconsts.id.po
@@ -1568,7 +1568,7 @@ msgid "%s MB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
