--- a/lcl/languages/lclstrconsts.ca.po
+++ b/lcl/languages/lclstrconsts.ca.po
@@ -1569,7 +1569,7 @@ msgid "%s MB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
