--- a/lcl/languages/lclstrconsts.it.po
+++ b/lcl/languages/lclstrconsts.it.po
@@ -1606,7 +1606,7 @@ msgid "%s MB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
