--- a/lcl/languages/lclstrconsts.ja.po
+++ b/lcl/languages/lclstrconsts.ja.po
@@ -1621,7 +1621,7 @@ msgid "%s MB"
 msgstr "%s MB"
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
