--- a/lcl/languages/lclstrconsts.no.po
+++ b/lcl/languages/lclstrconsts.no.po
@@ -1567,7 +1567,7 @@ msgid "%s MB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
