--- a/lcl/languages/lclstrconsts.pot
+++ b/lcl/languages/lclstrconsts.pot
@@ -1494,7 +1494,7 @@ msgid "%s MB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
