--- a/lcl/languages/lclstrconsts.pt_BR.po
+++ b/lcl/languages/lclstrconsts.pt_BR.po
@@ -1591,7 +1591,7 @@ msgid "%s MB"
 msgstr "%s MB"
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
