--- a/lcl/languages/lclstrconsts.si.po
+++ b/lcl/languages/lclstrconsts.si.po
@@ -1522,7 +1522,7 @@ msgid "%s MB"
 msgstr "%s MB"
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
