--- a/lcl/languages/lclstrconsts.sk.po
+++ b/lcl/languages/lclstrconsts.sk.po
@@ -1511,7 +1511,7 @@ msgid "%s MB"
 msgstr "%s MB"
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
