--- a/lcl/languages/lclstrconsts.zh_TW.po
+++ b/lcl/languages/lclstrconsts.zh_TW.po
@@ -1501,7 +1501,7 @@ msgid "%s MB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsmodificationdate
-msgid "Modif.Date"
+msgid "Date modified"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsname
