PoChecker: regenerated translations and updated Russian translation

--- a/components/pochecker/languages/pocheckerconsts.ru.po
+++ b/components/pochecker/languages/pocheckerconsts.ru.po
@@ -83,6 +83,10 @@ msgstr "Японский"
 msgid "Korean"
 msgstr "Корейский"
 
+#: pocheckerconsts.rs_lang_lo
+msgid "Lao"
+msgstr "Лаосский"
+
 #: pocheckerconsts.rs_lang_lt
 msgid "Lithuanian"
 msgstr "Литовский"
