IDEUtils: regenerated translations and updated Russian translation

--- a/ide/packages/ideutils/languages/ideutilspkgstrconsts.ru.po
+++ b/ide/packages/ideutils/languages/ideutilspkgstrconsts.ru.po
@@ -324,6 +324,10 @@ msgstr "Японский"
 msgid "Korean"
 msgstr "Корейский"
 
+#: ideutilspkgstrconsts.rslanguagelao
+msgid "Lao"
+msgstr "Лаосский"
+
 #: ideutilspkgstrconsts.rslanguagelithuanian
 msgid "Lithuanian"
 msgstr "Литовский"
