Translations: fixed Czech translation of "Duplicate unit" warning, merge request !602.
Changed incorrect verb form 'Zdvojit jednotku' (infinitive: 'to
duplicate unit') to correct adjective form 'Zdvojená jednotka'
('Duplicate unit').

The English original 'Duplicate unit "%s" in "%s"' uses 'duplicate' as
an adjective describing the unit, not as a verb. The Czech translation
should match this grammatical structure.


(cherry picked from commit 7160070966362df0f890f57c777d2a2fa0d26c50)

Co-authored-by: Cigydd <cigydd@gmail.com>

--- a/languages/lazaruside.cs.po
+++ b/languages/lazaruside.cs.po
@@ -9080,7 +9080,7 @@ msgstr "Duplicitní Jednotka"
 #: lazarusidestrconsts.lisduplicateunitin
 #, object-pascal-format
 msgid "Duplicate unit \"%s\" in \"%s\""
-msgstr "Zdvojit jednotku \"%s\" v \"%s\""
+msgstr "Zdvojená jednotka \"%s\" v \"%s\""
 
 #: lazarusidestrconsts.lisdynpkgamounttoscrollin
 msgid "Amount to scroll in"
