IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.ar.po
+++ b/languages/lazaruside.ar.po
@@ -9857,7 +9857,9 @@ msgid "Export environment options"
 msgstr ""
 
 #: lazarusidestrconsts.lisexporthtml
-msgid "Export as HTML"
+#, fuzzy
+#| msgid "Export as HTML"
+msgid "Export as HTML ..."
 msgstr "حوّل إلى HTML"
 
 #: lazarusidestrconsts.lisexportimport
