--- a/languages/lazaruside.es.po
+++ b/languages/lazaruside.es.po
@@ -10090,7 +10090,9 @@ msgid "Export environment options"
 msgstr "Exportar las opciones del entorno"
 
 #: lazarusidestrconsts.lisexporthtml
-msgid "Export as HTML"
+#, fuzzy
+#| msgid "Export as HTML"
+msgid "Export as HTML ..."
 msgstr "Exportar como HTML"
 
 #: lazarusidestrconsts.lisexportimport
