--- a/languages/lazaruside.lo.po
+++ b/languages/lazaruside.lo.po
@@ -9836,7 +9836,9 @@ msgid "Export environment options"
 msgstr "ສົ່ງອອກຕົວເລືອກສະພາບແວດລ້ອມ"
 
 #: lazarusidestrconsts.lisexporthtml
-msgid "Export as HTML"
+#, fuzzy
+#| msgid "Export as HTML"
+msgid "Export as HTML ..."
 msgstr "ສົ່ງອອກເປັນ HTML"
 
 #: lazarusidestrconsts.lisexportimport
