--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -10096,7 +10096,7 @@ msgid "Export environment options"
 msgstr ""
 
 #: lazarusidestrconsts.lisexporthtml
-msgid "Export as HTML"
+msgid "Export as HTML ..."
 msgstr ""
 
 #: lazarusidestrconsts.lisexportimport
