--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -10296,7 +10296,7 @@ msgid "Export environment options"
 msgstr ""
 
 #: lazarusidestrconsts.lisexporthtml
-msgid "Export as HTML"
+msgid "Export as HTML ..."
 msgstr ""
 
 #: lazarusidestrconsts.lisexportimport
