--- a/languages/lazaruside.hu.po
+++ b/languages/lazaruside.hu.po
@@ -9951,7 +9951,9 @@ msgid "Export environment options"
 msgstr "Környezet beállításainak exportálása"
 
 #: lazarusidestrconsts.lisexporthtml
-msgid "Export as HTML"
+#, fuzzy
+#| msgid "Export as HTML"
+msgid "Export as HTML ..."
 msgstr "Exportálás HTML-ként"
 
 #: lazarusidestrconsts.lisexportimport
