--- a/languages/lazaruside.id.po
+++ b/languages/lazaruside.id.po
@@ -10121,7 +10121,7 @@ msgid "Export environment options"
 msgstr ""
 
 #: lazarusidestrconsts.lisexporthtml
-msgid "Export as HTML"
+msgid "Export as HTML ..."
 msgstr ""
 
 #: lazarusidestrconsts.lisexportimport
