--- a/languages/lazaruside.ja.po
+++ b/languages/lazaruside.ja.po
@@ -10064,7 +10064,9 @@ msgid "Export environment options"
 msgstr "環境オプションをエクスポート"
 
 #: lazarusidestrconsts.lisexporthtml
-msgid "Export as HTML"
+#, fuzzy
+#| msgid "Export as HTML"
+msgid "Export as HTML ..."
 msgstr "HTMLとしてエクスポート"
 
 #: lazarusidestrconsts.lisexportimport
