--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-12-31 23:16+0300\n"
+"PO-Revision-Date: 2026-01-17 01:51+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -9825,8 +9825,8 @@ msgid "Export environment options"
 msgstr "Экспортировать параметры окружения"
 
 #: lazarusidestrconsts.lisexporthtml
-msgid "Export as HTML"
-msgstr "Экспортировать в HTML"
+msgid "Export as HTML ..."
+msgstr "Экспортировать в HTML ..."
 
 #: lazarusidestrconsts.lisexportimport
 msgid "Export / Import"
