--- a/languages/lazaruside.sk.po
+++ b/languages/lazaruside.sk.po
@@ -9891,7 +9891,9 @@ msgid "Export environment options"
 msgstr ""
 
 #: lazarusidestrconsts.lisexporthtml
-msgid "Export as HTML"
+#, fuzzy
+#| msgid "Export as HTML"
+msgid "Export as HTML ..."
 msgstr "Exportovať ako HTML"
 
 #: lazarusidestrconsts.lisexportimport
